--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <h2>1단계: 문제 제기</h2>
                 <div class="dialogue user">
                     <span class="dialogue-label">당신의 질문</span>
-                    <p>일본에서 너와 대화하는 안규환이 한국어로 기능자산이라고 번역한 펑셔닝을 생활기능이라고 번역했어. 2010년대에 어느 논문에서 내가 읽은 것 같아. 일본어로 생활기능이야. 근데 너와 대화하는 안규환의 기능자산이라는 개념과 용어와 정의와 일본어의 생활기능과 비교해서 유사성, 차별성, 경쟁력, 그리고 안규환 기능자산의 시장가치를 발견하거나 발명해줘.</p>
+                    <p>일본에서 너와 대화하는 안규환이 한국어로 기능자산이라고 번역한 functioning을 생활기능이라고 번역했어. 2010년대에 어느 논문에서 내가 읽은 것 같아. 일본어로 생활기능이야. 근데 너와 대화하는 안규환의 기능자산이라는 개념과 용어, 정의와 일본어의 생활기능과 비교해서 유사성, 차별성, 경쟁력, 그리고 안규환 기능자산의 시장가치를 발견하거나 발명해줘.</p>
                 </div>
             </div>
 
